# Sequence_Gen

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
app/: Dockerfile  api.py  main.py
app/core/: HuggingFace.py  ImageGeneratorProvider.py  PolliNationsImgGenerator.py  image_generator.py  prompt_generator.py  watermark_remover.py
app/helpers/: config.py
app/models/: StoryModel.py
app/routes/: base.py  story_gen.py
app/schemas/: SceneOutput.py  StoryRequest.py  StoryResponse.py  __init__.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
schemas/: SceneOutput.py  StoryResponse.py  __init__.py
tests/: test_client.py
