[project]
name = "sequence-gen"
version = "0.1.0"
description = "Generate consistent photo sequences from prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "Pillow>=10.1.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "diffusers>=0.24.0",
    "gradio>=4.12.0",
    "numpy>=1.24.0",
    "groq>=0.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "types-requests>=2.32.4.20250913",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
sequence-gen = "sequence_gen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sequence_gen"]

[tool.hatch.build.hooks.version]
path = "sequence_gen/__init__.py"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
]
